Actualizacion cambios aplicacion movil

--- a/Websockets2/platforms/browser/www/index.html
+++ b/Websockets2/platforms/browser/www/index.html
@@ -25,7 +25,7 @@
 
   <div id='encuadre'></div>
 
-  <div style="height: 200px; padding: 1px 0 0 0;">
+  <div style="height: 34%; padding: 1px 0 0 0;">
     <div id="contenedor-traduccion" class="card">
       <h2 id="titulo-traduccion" class="card__title">Traduciendo ("origen" a "destino"):</h2>
       <ons-progress-bar id="barra-carga" indeterminate style="visibility: hidden"></ons-progress-bar>
